<resources>
    <string name="app_name">监控服务管家</string>
    <!--登录页-->
    <string name="read"><u>阅读协议</u></string>
    <string name="forget_password"><u>忘记密码？</u></string>
    <string name="user_register"><u>注册</u></string>
    <string name="user_login">登录</string>
    <!--工作台-->
    <string name="quick_work">快捷工作</string>

    <!-- 首页 -->
    <string name="text_home_reapir">我要报修</string>
    <string name="text_home_install">我要报装</string>
    <string name="text_home_design">我要设计</string>
    <string name="text_home_unlock">开锁</string>
    <string name="text_home_service">客服</string>
    <string name="text_home_monitor">实时监控</string>
    <string name="text_work_repair">报修管控</string>
    <string name="text_work_install">报装管控</string>
    <string name="text_work_price">维修报价</string>
    <string name="text_work_maintain">维保管控</string>
    <string name="text_work_design">免费设计</string>
    <string name="text_work_transfer">交接班</string>
    <string name="text_device_info">设备信息</string>
    <string name="text_fault_info">故障信息</string>
    <string name="text_fault_description">故障详细描述</string>

    <!--IM-->
    <string name="all_group_member">全部群成员</string>
    <string name="group_portrait">群头像</string>
    <string name="group_name">群名字</string>
    <string name="group_announcement">群公告</string>
    <string name="quit_group">退出群</string>
    <string name="dismiss_group">解散</string>
    <string name="empty_group_notice">请编辑群公告</string>
    <string name="clean_message">清除聊天记录</string>
    <string name="message_notice">消息免打扰</string>
    <string name="set_top">会话置顶</string>
    <string name="group_notice_prefix">\@所有人\n</string>
    <string name="group_transfer">转让群主</string>
    <string name="group_shutup">全员禁言</string>
    <string name="private_chat">发起聊天</string>
    <string name="group_chat">创建群组</string>
    <string name="add_contacts">添加好友</string>
    <string name="group_qrt">群二维码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_repair_personalinfo">用户信息</string>
    <string name="text_repair_contactslinfo">联系人信息</string>
    <string name="text_repair_selectlocation">选择定位</string>
    <string name="text_repair_arrivetime">到达时限:</string>
    <string name="text_next">下一步</string>
    <string name="text_fault">故障</string>
    <string name="text_worker_detail_see_more_type">查看所有标签</string>
    <string name="text_work_talk_one">1.如果还有进步空间，应从哪方面入手？</string>
    <string name="text_work_talk_two">2.所在部门存在的最大问题及原因</string>
    <string name="text_work_talk_three">3.你会如何解决这些问题？</string>
    <string name="text_work_talk_four">4.工作中，不愉快的事情？</string>
    <string name="text_work_talk_five">5.公司中，最优秀的人？最敬佩的人？进步最大的人？</string>
    <string name="text_work_talk_six">6.针对当前工作，哪些方面不尽人意</string>
    <string name="text_work_talk_seven">7.哪些事情，应该做而没有去做？</string>
    <string name="text_work_talk_eight">8.如何才能帮助到你？</string>
    <string name="text_work_talk_nine">9.如何知道你需要帮助？</string>
    <string name="text_work_talk_ten">10.如何能更容易理解我想要表达的意思</string>
    <string name="text_work_talk_eleven">11.你觉得我们错失的最大机遇是什么</string>
    <string name="text_work_talk_input">请输入文字内容</string>

</resources>
