<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size_level5"
    android:layout_marginLeft="@dimen/item_margin_10"
    android:layout_marginRight="@dimen/item_margin_10"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_reparir"
            style="@style/style_client_home_meun"
            android:drawableTop="@mipmap/ic_client_home_repair"
            android:text="@string/text_home_reapir" />

        <TextView
            android:id="@+id/tv_install"
            style="@style/style_client_home_meun"
            android:drawableTop="@mipmap/ic_client_home_install"
            android:text="@string/text_home_install" />

        <TextView
            android:id="@+id/tv_design"
            style="@style/style_client_home_meun"
            android:drawableTop="@mipmap/ic_client_home_design"
            android:text="@string/text_home_design" />

        <TextView
            android:id="@+id/tv_unlock"
            style="@style/style_client_home_meun"
            android:drawableTop="@mipmap/ic_client_home_unlock"
            android:text="@string/text_home_unlock" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_level4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_service"
            style="@style/style_client_home_meun"
            android:drawableTop="@mipmap/ic_client_home_service"
            android:text="@string/text_home_service" />

        <TextView
            android:id="@+id/tv_monitor"
            style="@style/style_client_home_meun"
            android:drawableTop="@mipmap/ic_client_home_monitor"
            android:text="@string/text_home_monitor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>