<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_40"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_30"
        android:text="过程管控"
        android:textColor="@color/color_client_neworder"
        android:textSize="@dimen/textSize_16"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_34"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_work_repair"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_repair"
            android:text="@string/text_work_repair"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_work_install"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_install"
            android:text="@string/text_work_install"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_work_price"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_price"
            android:text="@string/text_work_price" />

        <TextView
            android:id="@+id/tv_work_maintain"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_client_work_maintain"
            android:text="@string/text_work_maintain" />

        <TextView style="@style/style_client_work_meun" />

        <TextView style="@style/style_client_work_meun" />


    </LinearLayout>

</LinearLayout>