<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_repair"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_contact_line_gray"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_repair_personalinfo"
                        android:textColor="@color/color_client_data_item_title"
                        android:textSize="@dimen/textSize_15" />


                </LinearLayout>

                <View style="@style/style_common_line_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>


                <View style="@style/style_common_line_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="请选择地址"
                        android:textColor="@color/color_client_neworder"
                        android:textSize="@dimen/textSize_13" />

                    <TextView
                        android:id="@+id/tv_selectAdress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_ll_btn"
                        android:drawableLeft="@mipmap/ic_location"
                        android:drawablePadding="@dimen/dimen_10"
                        android:padding="@dimen/dimen_10"
                        android:text="@string/text_repair_selectlocation"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/textSize_12" />

                </LinearLayout>

                <View style="@style/style_common_line_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ll_selctor"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_detail_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="请填写详细地址"
                        android:padding="15dp"
                        android:textColor="@color/color_client_neworder"
                        android:textSize="@dimen/textSize_13" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:background="@color/color_white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="订单信息"
                        android:textColor="@color/color_client_data_item_title"
                        android:textSize="@dimen/textSize_15" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ll_selctor"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_repair_arrivetime"
                        android:textColor="@color/color_bottom"
                        android:textSize="@dimen/textSize_13" />

                    <TextView
                        android:id="@+id/tv_project_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dimen_30"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawablePadding="@dimen/dimen_10"
                        android:drawableRight="@mipmap/ic_icon_right"
                        android:gravity="right"
                        android:hint="请填写项目名称"
                        android:textColor="@color/color_client_neworder"
                        android:textSize="@dimen/textSize_13" />
                </LinearLayout>

                <View style="@style/style_common_line_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_30"
                        android:text="@string/text_repair_arrivetime"
                        android:textColor="@color/color_bottom"
                        android:textSize="@dimen/textSize_13" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dimen_10"
                        android:drawableRight="@mipmap/ic_icon_right"
                        android:gravity="right"
                        android:onClick="onArriveTimeOptionPicker"
                        android:padding="@dimen/dimen_30"
                        android:textColor="@color/color_client_neworder"
                        android:textSize="@dimen/textSize_13" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ll_selctor"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_notice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="请填写备注信息"
                        android:padding="15dp"
                        android:textColor="@color/color_client_neworder"
                        android:textSize="@dimen/textSize_13" />
                </LinearLayout>


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_300"
                android:background="@color/color_white">

                <TextView
                    android:id="@+id/tv_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/dimen_40"
                    android:background="@mipmap/ic_next_background"
                    android:gravity="center"
                    android:text="@string/text_next"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/textSize_13" />
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>